crates/cribo/tests/snapshots/bundled_code@tree_shake_ast_dependency_coverage.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/tree_shake_ast_dependency_coverage/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
operations = _cribo.types.SimpleNamespace(__name__='operations')
async def await_value() -> str:
    return "await"
def named_value() -> str:
    return "named"
def lambda_value() -> str:
    return "lambda"
def yield_value() -> str:
    return "yield"
def yield_from_values() -> list[str]:
    return ["yield-from"]
def starred_values() -> list[str]:
    return ["starred"]
def sequence_values() -> list[str]:
    return ["before", "slice", "after"]
def slice_lower() -> int:
    return 1
def slice_upper() -> int:
    return 2
def slice_step() -> int:
    return 1
def annotated_value() -> str:
    return "annotated"
def class_annotation_value() -> str:
    return "class-annotation"
def annotation_scope_value() -> str:
    local: function_local_annotation

    class Annotated:
        retained: class_annotation_value

        def read(self) -> str:
            local: method_local_annotation
            return self.__annotations__["retained"]()
    return Annotated().read()
def augmented_value() -> str:
    return "-augmented"
def delete_index() -> int:
    return 0
def type_alias_value():
    return str
def generated_value():
    yield yield_value()
def delegated_values():
    yield from yield_from_values()
async def exercise() -> str:
    named = (result := named_value())
    callback = lambda: lambda_value()
    awaited = await await_value()
    starred = [*starred_values()]
    sliced = sequence_values()[slice_lower():slice_upper():slice_step()]
    annotated: str = annotated_value()
    augmented = "base"
    augmented += augmented_value()
    deleted = ["remove", "keep"]
    del deleted[delete_index()]
    generated = list(generated_value())
    delegated = list(delegated_values())
    type RuntimeAlias = type_alias_value()
    values = [named, result, callback(), awaited, *generated, *delegated, *starred, *sliced, annotated, annotation_scope_value(), augmented, *deleted, RuntimeAlias.__value__.__name__]
    return "|".join(values)
operations.annotated_value = annotated_value
operations.annotation_scope_value = annotation_scope_value
operations.augmented_value = augmented_value
operations.await_value = await_value
operations.class_annotation_value = class_annotation_value
operations.delegated_values = delegated_values
operations.delete_index = delete_index
operations.exercise = exercise
operations.generated_value = generated_value
operations.lambda_value = lambda_value
operations.named_value = named_value
operations.sequence_values = sequence_values
operations.slice_lower = slice_lower
operations.slice_step = slice_step
operations.slice_upper = slice_upper
operations.starred_values = starred_values
operations.type_alias_value = type_alias_value
operations.yield_from_values = yield_from_values
operations.yield_value = yield_value
asyncio = _cribo.asyncio
print(_cribo.asyncio.run(exercise()))
