crates/cribo/tests/snapshots/bundled_code@tree_shake_function_local_bindings.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/tree_shake_function_local_bindings/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
_cribo_captured = {}
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _SimpleNamespace=_cribo.types.SimpleNamespace, _captured=_cribo_captured):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _captured[binding] if binding in _captured else _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        if init is None:
            if key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('class_side_effects', '_cribo_init___cribo_b0c5db_class_side_effects', 'class_side_effects', False)
_cribo_finder_local.register('scoped_imports', None, None, False, {'nested_value': 'nested_value', 'method_value': 'method_value'})
_cribo_finder_local.register('scope_cases', None, None, False, {'exercise': 'exercise', 'module_state': 'module_state'})
registry = _cribo.types.SimpleNamespace(__name__='registry')
events = []
registry.events = events
class_side_effects = _cribo.types.SimpleNamespace(__name__='class_side_effects', __initializing__=False, __initialized__=False)
_cribo_finder.bind('class_side_effects', class_side_effects)
def _cribo_init___cribo_b0c5db_class_side_effects(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException, _cribo=_cribo, _sys=_sys):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = ''
    _cribo_self.__doc__ = None
    events = registry.events
    class_side_effects.events = events

    class Plugin:
        events.append("class-body")
    Plugin.__module__ = 'class_side_effects'
    Plugin.__qualname__ = 'Plugin'
    _cribo_self.Plugin = Plugin
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
class_side_effects.__init__ = _cribo_init___cribo_b0c5db_class_side_effects
scoped_imports = _cribo.types.SimpleNamespace(__name__='scoped_imports')
def nested_value():
    return "import"
nested_value.__module__ = 'scoped_imports'
def method_value():
    return "method-import"
method_value.__module__ = 'scoped_imports'
scoped_imports.method_value = method_value
scoped_imports.nested_value = nested_value
scope_cases = _cribo.types.SimpleNamespace(__name__='scope_cases')
module_state = "global"
def exercise(parameter: str) -> str:
    global module_state
    local_assignment = "local"
    comprehension_values = [comprehension_target for comprehension_target in ("comprehension",)]
    try:
        raise ValueError("exception")
    except ValueError as exception_target:
        exception_value = str(exception_target)
    match {"value": "pattern"}:
        case {"value": pattern_capture}:
            pattern_value = pattern_capture
    for loop_target in ("loop",):
        loop_value = loop_target
    math_prod = _cribo.math.prod

    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'scope_cases'), _cribo_f)[1])
    def nested() -> str:
        nested_local = "nested"
        return f"{nested_local}-{nested_value()}"

    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'scope_cases'), _cribo_f)[1])
    class LocalType:

        @staticmethod
        @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'scope_cases'), _cribo_f)[1])
        def value() -> str:
            return method_value()
    module_state += "-dependency"
    values = [parameter, local_assignment, *comprehension_values, exception_value, pattern_value, loop_value, str(_cribo.math.prod((2, 3))), nested(), LocalType.value(), module_state]
    return "|".join(values)
exercise.__module__ = 'scope_cases'
scope_cases.exercise = exercise
scope_cases.module_state = module_state
_cribo_captured['nested_value'] = nested_value
_cribo_captured['method_value'] = method_value
_cribo_captured['exercise'] = exercise
_cribo_captured['module_state'] = module_state
class_side_effects = _cribo_init___cribo_b0c5db_class_side_effects(class_side_effects)
print(f"{exercise('parameter')}|{events[0]}")
