crates/cribo/tests/snapshots/bundled_code@tree_shake_match_dependencies.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/tree_shake_match_dependencies/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        if getattr(module, '_cribo_machinery_loaded', False):
            module.__initialized__ = False
            module.__initializing__ = False
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('routing', '_cribo_init___cribo_6c62dc_routing', 'routing', False)
formatting = _cribo.types.SimpleNamespace(__name__='formatting')
def format_kind(kind: str) -> str:
    return f"handled:{kind}"
formatting.format_kind = format_kind
routing = _cribo.types.SimpleNamespace(__name__='routing', __initializing__=False, __initialized__=False)
_cribo_finder.bind('routing', routing)
def _cribo_init___cribo_6c62dc_routing(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''

    class Kinds:
        READY = "ready"
    Kinds.__module__ = 'routing'
    Kinds.__qualname__ = 'Kinds'
    self.Kinds = Kinds

    def module_marker() -> str:
        return "ready"
    self.module_marker = module_marker
    match module_marker():
        case Kinds.READY:
            MODULE_STATE = "module-ready"
            routing.MODULE_STATE = MODULE_STATE
        case _:
            MODULE_STATE = "module-unknown"
            routing.MODULE_STATE = MODULE_STATE

    def normalize_payload(payload: object) -> object:
        return payload
    self.normalize_payload = normalize_payload

    def should_handle(payload: object) -> bool:
        return isinstance(payload, dict)
    self.should_handle = should_handle

    def dispatch(payload: object) -> str:
        match normalize_payload(payload):
            case {"kind": Kinds.READY} if should_handle(payload):
                format_kind = formatting.format_kind
                routing.format_kind = format_kind
                result = format_kind(Kinds.READY)
            case _:
                result = "ignored"
        return f"{MODULE_STATE}:{result}"
    self.dispatch = dispatch
    self.__initialized__ = True
    self.__initializing__ = False
    return self
routing.__init__ = _cribo_init___cribo_6c62dc_routing
routing = _cribo_init___cribo_6c62dc_routing(routing)
dispatch = routing.dispatch
print(dispatch({"kind": "ready"}))
