crates/cribo/tests/snapshots/bundled_code@try_except_function_export.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/try_except_function_export/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry):
        self._entry = entry

    def create_module(self, spec):
        namespace = self._entry[1]
        if namespace is not None:
            return globals()[namespace]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        try:
            globals()[init](module)
        except BaseException:
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('test_module', '_cribo_init___cribo_e6f4c0_test_module', 'test_module', False)
test_module = _cribo.types.SimpleNamespace(__name__='test_module', __initializing__=False, __initialized__=False)
def _cribo_init___cribo_e6f4c0_test_module(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''
    """Module with function defined in try-except-else block."""
    try:
        import nonexistent_module
        test_module.nonexistent_module = nonexistent_module
        HAS_MODULE = True
        test_module.HAS_MODULE = HAS_MODULE
    except ImportError:

        def get_function():
            return "fallback function"
        test_module.get_function = get_function
        HAS_MODULE = False
        test_module.HAS_MODULE = HAS_MODULE
    else:

        def get_function():
            return "real function with module"
        test_module.get_function = get_function
    self.get_function = get_function
    self.__initialized__ = True
    self.__initializing__ = False
    return self
test_module.__init__ = _cribo_init___cribo_e6f4c0_test_module
"""Test case for functions defined in try-except-else blocks."""
test_module = _cribo_init___cribo_e6f4c0_test_module(test_module)
get_function = test_module.get_function
result = get_function()
print(result)
